ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudmart-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.hakimdevops.art
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cloudmart-frontend-app-service
                port:
                  number: 5001
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: cloudmart-backend-app-service
                port:
                  number: 5000
